# roguelite_dungeon-2

./: .gitignore  ANALYSIS.md  ANIMATION_FIX_SUMMARY.md  ASCII_FILTER_SYSTEM.md  ATTACK_PATTERNS.md  ATTACK_PATTERNS_QUICK_REF.md  ATTACK_PATTERNS_VISUAL.md  BUGFIX_SUMMARY.md  CODEBASE_ANALYSIS.md  CODEBASE_DOCUMENTATION.md  CONTROLS_REFERENCE.md  Cargo.toml  FEATURES_GUIDE.md  FIXES_CHECKLIST.md  FIX_EXAMPLES.md  GAME_MECHANICS.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PHASE4_QUICK_START.md  PHASE4_REPORT.md  PHASE4_SESSION_COMPLETE.md  PHASE4_SUMMARY.md  PHASE5_COMPLETE.md  PHASE5_INDEX.md  PHASE5_QUICK_SUMMARY.md  PHASE5_STATUS.txt  PHASE6_BUG_FIXES.md  PHASE6_QUICK_SUMMARY.txt  PHASE6_STATUS.txt  PHASE_6_IMPLEMENTATION.md  QUICK_REFERENCE_PHASE6.md  README_ANALYSIS.md  ROADMAP_PROGRESS.md  SMOOTH_CAMERA_GUIDE.md  START_HERE.md  VERIFICATION_REPORT.md  VISUAL_SUMMARY.md  log.txt  settings.json  (+1 more)
misc/: New Text Document.txt  add knockback to the enemy's and pl.txt
saves/: waewaea.json  weaewaeaeawea.json
src/: app.rs  colors.rs  constants.rs  emoji.rs  input.rs  lib.rs  logo.txt  main.rs
src/input/: handlers.rs  menu.rs
src/model/: arrow.rs  attack_pattern.rs  audio.rs  boss.rs  character.rs  collision.rs  consumable.rs  cooldown.rs  damage_calculator.rs  enemy.rs  enemy_type.rs  floor.rs  game_difficulty.rs  gamesave.rs  item.rs  item_rarity.rs  item_tier.rs  mod.rs  particle.rs  pathfinding_cache.rs  reach_shape.rs  settings.rs  skill.rs  skill_tree_path.rs  status_effect.rs  (+3 more)
tests/: edge_case_tests.rs  integration_tests.rs
(+11 files in other folders)
