[package]
name = "roguelite_dungeon"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9.2", features = ["small_rng"] }
rodio = "0.21.1"
parking_lot = "0.12"
unicode-width = "0.2.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }